--- a/scrapbook.ipynb
+++ b/scrapbook.ipynb
@@ -541,6 +541,176 @@
     "# Close the WebDriver\n",
     "driver.quit()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "\n",
+    "def extract_details(driver):\n",
+    "    details = {}\n",
+    "    \n",
+    "    details['file_number'] = driver.find_element(By.ID, \"ctl00_ContentPlaceHolder1_lblFile2\").text\n",
+    "    details['type'] = driver.find_element(By.ID, \"ctl00_ContentPlaceHolder1_lblType2\").text\n",
+    "    details['introduced'] = driver.find_element(By.ID, \"ctl00_ContentPlaceHolder1_lblIntroduced2\").text\n",
+    "    details['on_agenda'] = driver.find_element(By.ID, \"ctl00_ContentPlaceHolder1_lblOnAgenda2\").text\n",
+    "    details['enactment_date'] = driver.find_element(By.ID, \"ctl00_ContentPlaceHolder1_lblEnactmentDate2\").text\n",
+    "    details['name'] = driver.find_element(By.ID, \"ctl00_ContentPlaceHolder1_lblName2\").text\n",
+    "    details['status'] = driver.find_element(By.ID, \"ctl00_ContentPlaceHolder1_lblStatus2\").text\n",
+    "    details['in_control'] = driver.find_element(By.ID, \"ctl00_ContentPlaceHolder1_hypInControlOf2\").text\n",
+    "    details['final_action'] = driver.find_element(By.ID, \"ctl00_ContentPlaceHolder1_lblPassed2\").text\n",
+    "    details['enactment_number'] = driver.find_element(By.ID, \"ctl00_ContentPlaceHolder1_lblEnactmentNumber2\").text\n",
+    "    details['title'] = driver.find_element(By.ID, \"ctl00_ContentPlaceHolder1_lblTitle2\").text\n",
+    "    sponsors = driver.find_elements(By.CSS_SELECTOR, \"#ctl00_ContentPlaceHolder1_lblSponsors2 a\")\n",
+    "    details['sponsors'] = ', '.join([sponsor.text for sponsor in sponsors])\n",
+    "    \n",
+    "    return details\n",
+    "\n",
+    "def store_in_database(data, db_name='legislation.db'):\n",
+    "    # Connect to SQLite database (or create it if it doesn't exist)\n",
+    "    conn = sqlite3.connect(db_name)\n",
+    "    c = conn.cursor()\n",
+    "\n",
+    "    # Create table\n",
+    "    c.execute('''CREATE TABLE IF NOT EXISTS legislation\n",
+    "                 (file_number TEXT, type TEXT, introduced TEXT, on_agenda TEXT, enactment_date TEXT,\n",
+    "                  name TEXT, status TEXT, in_control TEXT, final_action TEXT, enactment_number TEXT,\n",
+    "                  title TEXT, sponsors TEXT, url TEXT)''')\n",
+    "\n",
+    "    # Insert a row of data\n",
+    "    c.execute('''INSERT INTO legislation (file_number, type, introduced, on_agenda, enactment_date, \n",
+    "                                          name, status, in_control, final_action, enactment_number, \n",
+    "                                          title, sponsors, url) \n",
+    "                 VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)''', \n",
+    "                 (data['file_number'], data['type'], data['introduced'], data['on_agenda'], data['enactment_date'],\n",
+    "                  data['name'], data['status'], data['in_control'], data['final_action'], data['enactment_number'],\n",
+    "                  data['title'], data['sponsors'], data['url']))\n",
+    "\n",
+    "    # Save (commit) the changes\n",
+    "    conn.commit()\n",
+    "\n",
+    "    # Close the connection\n",
+    "    conn.close()\n",
+    "\n",
+    "leg_url = \"https://sfgov.legistar.com/LegislationDetail.aspx?ID=6452947&GUID=F7B2AAAE-C341-40CC-B307-E4EB926C02C8&Options=Advanced&Search=\"\n",
+    "\n",
+    "# Initialize WebDriver\n",
+    "driver = webdriver.Chrome()\n",
+    "driver.get(leg_url)\n",
+    "\n",
+    "# Wait for the page to load completely\n",
+    "driver.implicitly_wait(10)\n",
+    "\n",
+    "# Extract the details\n",
+    "details = extract_details(driver)\n",
+    "details['url'] = leg_url\n",
+    "\n",
+    "# Store the details in the database\n",
+    "store_in_database(details)\n",
+    "\n",
+    "# Close the WebDriver\n",
+    "driver.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Legislation Details\n",
+      "--------------------\n",
+      "File Number:       231273\n",
+      "Type:              Ordinance\n",
+      "Introduced:        12/12/2023\n",
+      "On Agenda:         \n",
+      "Enactment Date:    2/9/2024\n",
+      "Name:              Settlement of Claims, Litigation - SFPUC Water Pipeline Break - Fillmore Street and Green Street - Not to Exceed $7,000,000\n",
+      "Status:            Passed\n",
+      "In Control:        Clerk of the Board\n",
+      "Final Action:      2/9/2024\n",
+      "Enactment Number:  020-24\n",
+      "Title:             Ordinance authorizing the San Francisco Public Utilities Commission (SFPUC) and the Office of the City Attorney to approve settlements of claims arising out of the September 10, 2023, break of the SFPUC's water transmission pipeline at the intersection of Fillmore and Green Streets for amounts exceeding $25,000 per claim, notwithstanding Administrative Code, Section 10.22, et. seq., but not to exceed $1,000,000 per claim, and delegating authority under Charter, Section 6.102(5) for the settlement of related litigation, if any, up to an aggregate total settlement amount not to exceed $7,000,000, subject to periodic reporting to the Board of Supervisors Government Audit and Oversight Committee.\n",
+      "Sponsors:          Catherine Stefani\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'url'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/Projects/sf-legistar-scraper/env/lib/python3.10/site-packages/pandas/core/indexes/base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[0;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'url'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 27\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTitle:             \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrow[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtitle\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSponsors:          \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrow[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msponsors\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 27\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mURL:               \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43murl\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m=\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m40\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/Projects/sf-legistar-scraper/env/lib/python3.10/site-packages/pandas/core/series.py:1121\u001b[0m, in \u001b[0;36mSeries.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1118\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_values[key]\n\u001b[1;32m   1120\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m key_is_scalar:\n\u001b[0;32m-> 1121\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_value\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1123\u001b[0m \u001b[38;5;66;03m# Convert generator to list before going through hashable part\u001b[39;00m\n\u001b[1;32m   1124\u001b[0m \u001b[38;5;66;03m# (We will iterate through the generator there to check for slices)\u001b[39;00m\n\u001b[1;32m   1125\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n",
+      "File \u001b[0;32m~/Projects/sf-legistar-scraper/env/lib/python3.10/site-packages/pandas/core/series.py:1237\u001b[0m, in \u001b[0;36mSeries._get_value\u001b[0;34m(self, label, takeable)\u001b[0m\n\u001b[1;32m   1234\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_values[label]\n\u001b[1;32m   1236\u001b[0m \u001b[38;5;66;03m# Similar to Index.get_value, but we do not fall back to positional\u001b[39;00m\n\u001b[0;32m-> 1237\u001b[0m loc \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1239\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(loc):\n\u001b[1;32m   1240\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_values[loc]\n",
+      "File \u001b[0;32m~/Projects/sf-legistar-scraper/env/lib/python3.10/site-packages/pandas/core/indexes/base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3810\u001b[0m     ):\n\u001b[1;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'url'"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load data from SQLite database\n",
+    "conn = sqlite3.connect('legislation.db')\n",
+    "df = pd.read_sql_query(\"SELECT * FROM legislation\", conn)\n",
+    "\n",
+    "# Close the connection\n",
+    "conn.close()\n",
+    "\n",
+    "# Display the data\n",
+    "# Print each legislation's details in a readable format\n",
+    "for index, row in df.iterrows():\n",
+    "    print(\"Legislation Details\")\n",
+    "    print(\"-\" * 20)\n",
+    "    print(f\"File Number:       {row['file_number']}\")\n",
+    "    print(f\"Type:              {row['type']}\")\n",
+    "    print(f\"Introduced:        {row['introduced']}\")\n",
+    "    print(f\"On Agenda:         {row['on_agenda']}\")\n",
+    "    print(f\"Enactment Date:    {row['enactment_date']}\")\n",
+    "    print(f\"Name:              {row['name']}\")\n",
+    "    print(f\"Status:            {row['status']}\")\n",
+    "    print(f\"In Control:        {row['in_control']}\")\n",
+    "    print(f\"Final Action:      {row['final_action']}\")\n",
+    "    print(f\"Enactment Number:  {row['enactment_number']}\")\n",
+    "    print(f\"Title:             {row['title']}\")\n",
+    "    print(f\"Sponsors:          {row['sponsors']}\")\n",
+    "    print(f\"URL:               {row['url']}\")\n",
+    "    print(\"\\n\" + \"=\" * 40 + \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load data from SQLite database\n",
+    "conn = sqlite3.connect('legislation.db')\n",
+    "df = pd.read_sql_query(\"SELECT * FROM legislation\", conn)\n",
+    "\n",
+    "# Close the connection\n",
+    "conn.close()"
+   ]
   }
  ],
  "metadata": {
