--- a/scrapbook.ipynb
+++ b/scrapbook.ipynb
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +586,7 @@
     "    c.execute('''INSERT INTO legislation (file_number, type, introduced, on_agenda, enactment_date, \n",
     "                                          name, status, in_control, final_action, enactment_number, \n",
     "                                          title, sponsors, url) \n",
-    "                 VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)''', \n",
+    "                 VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)''', \n",
     "                 (data['file_number'], data['type'], data['introduced'], data['on_agenda'], data['enactment_date'],\n",
     "                  data['name'], data['status'], data['in_control'], data['final_action'], data['enactment_number'],\n",
     "                  data['title'], data['sponsors'], data['url']))\n",
@@ -596,8 +596,9 @@
     "\n",
     "    # Close the connection\n",
     "    conn.close()\n",
-    "\n",
-    "leg_url = \"https://sfgov.legistar.com/LegislationDetail.aspx?ID=6452947&GUID=F7B2AAAE-C341-40CC-B307-E4EB926C02C8&Options=Advanced&Search=\"\n",
+    "#leg_url = \"https://sfgov.legistar.com/LegislationDetail.aspx?ID=6452947&GUID=F7B2AAAE-C341-40CC-B307-E4EB926C02C8&Options=Advanced&Search=\"\n",
+    "leg_url = \"https://sfgov.legistar.com/LegislationDetail.aspx?ID=6452946&GUID=1D3F0E5B-B78B-49F8-BD05-F313A71CE055&Options=Advanced&Search=\"\n",
+    "#leg_url = \"https://sfgov.legistar.com/LegislationDetail.aspx?ID=6452945&GUID=AAE4066E-C232-4B3C-B304-34BF3DDEC843&Options=Advanced&Search=\"\n",
     "\n",
     "# Initialize WebDriver\n",
     "driver = webdriver.Chrome()\n",
@@ -619,13 +620,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Legislation Details\n",
+      "--------------------\n",
+      "File Number:       231274\n",
+      "Type:              Ordinance\n",
+      "Introduced:        12/12/2023\n",
+      "On Agenda:         \n",
+      "Enactment Date:    4/4/2024\n",
+      "Name:              Development Agreement Amendment - California Barrel Company, LLC - Potrero Power Station\n",
+      "Status:            Passed\n",
+      "In Control:        Clerk of the Board\n",
+      "Final Action:      4/4/2024\n",
+      "Enactment Number:  067-24\n",
+      "Title:             Ordinance amending a Development Agreement between the City and County of San Francisco and California Barrel Company, LLC, a Delaware limited liability company, for the Potrero Power Station project, to allow for the establishment of San Francisco Enhanced Financing District No. 1 (Power Station); making findings under the California Environmental Quality Act; and making findings of conformity with the General Plan, and the eight priority policies of Planning Code, Section 101.1(b).\n",
+      "Sponsors:          Shamann Walton, Rafael Mandelman, Myrna Melgar, Ahsha Safai\n",
+      "URL:               https://sfgov.legistar.com/LegislationDetail.aspx?ID=6452947&GUID=F7B2AAAE-C341-40CC-B307-E4EB926C02C8&Options=Advanced&Search=\n",
+      "\n",
+      "========================================\n",
+      "\n",
+      "Legislation Details\n",
+      "--------------------\n",
+      "File Number:       231272\n",
+      "Type:              Ordinance\n",
+      "Introduced:        12/12/2023\n",
+      "On Agenda:         \n",
+      "Enactment Date:    \n",
+      "Name:              Business and Tax Regulations Code - Streamlined Permitting Review in C-3 Districts\n",
+      "Status:            Pending Committee Action\n",
+      "In Control:        Budget and Finance Committee\n",
+      "Final Action:      \n",
+      "Enactment Number:  \n",
+      "Title:             Ordinance amending the Business and Tax Regulations Code to expand streamlined permitting review of principally permitted commercial uses to upper floors in C-3 (Downtown Commercial) Districts; and affirming the Planning Department’s determination under the California Environmental Quality Act.\n",
+      "Sponsors:          Aaron Peskin\n",
+      "URL:               https://sfgov.legistar.com/LegislationDetail.aspx?ID=6452945&GUID=AAE4066E-C232-4B3C-B304-34BF3DDEC843&Options=Advanced&Search=\n",
+      "\n",
+      "========================================\n",
+      "\n",
       "Legislation Details\n",
       "--------------------\n",
       "File Number:       231273\n",
@@ -639,29 +676,11 @@
       "Final Action:      2/9/2024\n",
       "Enactment Number:  020-24\n",
       "Title:             Ordinance authorizing the San Francisco Public Utilities Commission (SFPUC) and the Office of the City Attorney to approve settlements of claims arising out of the September 10, 2023, break of the SFPUC's water transmission pipeline at the intersection of Fillmore and Green Streets for amounts exceeding $25,000 per claim, notwithstanding Administrative Code, Section 10.22, et. seq., but not to exceed $1,000,000 per claim, and delegating authority under Charter, Section 6.102(5) for the settlement of related litigation, if any, up to an aggregate total settlement amount not to exceed $7,000,000, subject to periodic reporting to the Board of Supervisors Government Audit and Oversight Committee.\n",
-      "Sponsors:          Catherine Stefani\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'url'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m~/Projects/sf-legistar-scraper/env/lib/python3.10/site-packages/pandas/core/indexes/base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[0;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'url'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 27\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTitle:             \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrow[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtitle\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSponsors:          \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrow[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msponsors\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 27\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mURL:               \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43murl\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m=\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m40\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/Projects/sf-legistar-scraper/env/lib/python3.10/site-packages/pandas/core/series.py:1121\u001b[0m, in \u001b[0;36mSeries.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1118\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_values[key]\n\u001b[1;32m   1120\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m key_is_scalar:\n\u001b[0;32m-> 1121\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_value\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1123\u001b[0m \u001b[38;5;66;03m# Convert generator to list before going through hashable part\u001b[39;00m\n\u001b[1;32m   1124\u001b[0m \u001b[38;5;66;03m# (We will iterate through the generator there to check for slices)\u001b[39;00m\n\u001b[1;32m   1125\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n",
-      "File \u001b[0;32m~/Projects/sf-legistar-scraper/env/lib/python3.10/site-packages/pandas/core/series.py:1237\u001b[0m, in \u001b[0;36mSeries._get_value\u001b[0;34m(self, label, takeable)\u001b[0m\n\u001b[1;32m   1234\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_values[label]\n\u001b[1;32m   1236\u001b[0m \u001b[38;5;66;03m# Similar to Index.get_value, but we do not fall back to positional\u001b[39;00m\n\u001b[0;32m-> 1237\u001b[0m loc \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1239\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(loc):\n\u001b[1;32m   1240\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_values[loc]\n",
-      "File \u001b[0;32m~/Projects/sf-legistar-scraper/env/lib/python3.10/site-packages/pandas/core/indexes/base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3810\u001b[0m     ):\n\u001b[1;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'url'"
+      "Sponsors:          Catherine Stefani\n",
+      "URL:               https://sfgov.legistar.com/LegislationDetail.aspx?ID=6452946&GUID=1D3F0E5B-B78B-49F8-BD05-F313A71CE055&Options=Advanced&Search=\n",
+      "\n",
+      "========================================\n",
+      "\n"
      ]
     }
    ],
